# wang-landau-analysis

./: README.md
wang-landau/: Cargo.toml  README.md  free_energy.py  process_data.py  pyproject.toml  wang-landau.py
wang-landau/ising-16/: data-0.00000095367431640625.csv  data-0.0000019073486328125.csv  data-0.000003814697265625.csv  data-0.00000762939453125.csv  data-0.0000152587890625.csv  data-0.000030517578125.csv  data-0.00006103515625.csv  data-0.0001220703125.csv  data-0.000244140625.csv  data-0.00048828125.csv  data-0.0009765625.csv  data-0.001953125.csv  data-0.00390625.csv  data-0.0078125.csv  data-0.015625.csv  data-0.03125.csv  data-0.0625.csv  data-0.125.csv  data-0.25.csv  data-0.5.csv
wang-landau/ising-32/: data-0.0000019073486328125.csv  data-0.000003814697265625.csv  data-0.00000762939453125.csv  data-0.0000152587890625.csv  data-0.000030517578125.csv  data-0.00006103515625.csv  data-0.0001220703125.csv  data-0.000244140625.csv  data-0.00048828125.csv  data-0.0009765625.csv  data-0.001953125.csv  data-0.00390625.csv  data-0.0078125.csv  data-0.015625.csv  data-0.03125.csv  data-0.0625.csv  data-0.125.csv  data-0.25.csv  data-0.5.csv  data-1.csv
wang-landau/ising-8/: data-0.000000014901161193847656.csv  data-0.000000029802322387695313.csv  data-0.00000005960464477539063.csv  data-0.00000011920928955078125.csv  data-0.0000002384185791015625.csv  data-0.000000476837158203125.csv  data-0.00000095367431640625.csv  data-0.0000019073486328125.csv  data-0.000003814697265625.csv  data-0.00000762939453125.csv  data-0.0000152587890625.csv  data-0.001953125.csv  (+16 more)
(+5 files in other folders)
