[package]
name = "wang-landau"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
csv = "1.3.0"
oorandom = "11.1.4"
ordered-float = { version = "4.2.2", features = ["serde"] }
polars = {version = "0.43.1", default-features = false, features = ["csv"]}
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
